# findex

./: AppIcon.qml  ApplicationSettings.cpp  ApplicationSettings.h  CMakeLists.txt  FileAssociationService.cpp  FileAssociationService.h  FileAssociationService_linux.cpp  FileAssociationService_mac.cpp  FileAssociationService_win.cpp  FileIconProvider.cpp  FileIconProvider.h  FileManagerBridge.cpp  FileManagerBridge.h  FileManagerFileOpsService.cpp  FileManagerNavigationService.cpp  FileManagerNavigationService.h  FileManagerSearchService.cpp  FileManagerSearchService.h  FileManagerSessionService.cpp  FileManagerSessionService.h  FileManagerSidebarService.cpp  FileManagerSidebarService.h  FileOperationWorker.cpp  FileOperationWorker.h  FileOperationsService.cpp  FileOperationsService.h  Main.qml  appicon.rc  fileassociationservice.cpp  fileassociationservice.h  findex.desktop  main.cpp  resources.qrc
.github/workflows/: ci.yml
navigation/: NavigationBreadcrumbModel.cpp  NavigationBreadcrumbModel.h  NavigationViewModel.cpp  NavigationViewModel.h
preview/: PreviewPaneViewModel.cpp  PreviewPaneViewModel.h
qml/: Main.qml
qml/app/files/: CompactFileView.qml  DetailsFileView.qml  FileContextMenu.qml  LargeIconsFileView.qml  TilesFileView.qml
qml/app/layout/: AppShell.qml  SplitWorkspace.qml
qml/app/preview/: PreviewPane.qml
qml/app/runtime/: AppOverlays.qml
qml/app/sidebar/: DriveListPane.qml  QuickAccessPane.qml  SidebarContextMenu.qml  SidebarItem.qml  SidebarTreePane.qml
qml/app/statusbar/: NotificationsPopup.qml  StatusBar.qml
qml/app/titlebar/: AppTitleBar.qml  TabContextMenu.qml
qml/app/titlebar/tabs/: TabButton.qml  TabStrip.qml
qml/app/topbar/: CommandBar.qml  NavigationBar.qml
qml/components/: AppIcon.qml  ExplorerScrollbarH.qml  ExplorerScrollbarV.qml  IconButton.qml  InlineRenameField.qml  NotificationCard.qml  SelectionBand.qml  StyledMenu.qml  StyledMenuItem.qml  StyledMenuSeparator.qml  ThinProgressBar.qml  WindowButton.qml
qml/components/foundation/: AppIcon.qml  BaseTooltip.qml  ExplorerScrollbarH.qml  ExplorerScrollbarV.qml  IconButton.qml  InlineRenameField.qml  NotificationCard.qml  SelectionBand.qml  StyledMenu.qml  StyledMenuItem.qml  StyledMenuSeparator.qml  ThinProgressBar.qml  WindowButton.qml
qml/components/theme/: AppTheme.qml  Metrics.qml  Typography.qml  qmldir
qml/features/breadcrumb/: BreadcrumbBar.qml  BreadcrumbItem.qml
qml/features/files/: BreadcrumbContextMenu.qml  EmptyAreaContextMenu.qml  FileAreaContextMenu.qml  FileContextMenu.qml  FileDragPreview.qml  MultiFileContextMenu.qml
qml/features/sidebar/: DriveListPane.qml  SidebarContextMenu.qml  SidebarItem.qml  SidebarTreePane.qml
qml/features/tabs/: TabButton.qml  TabContextMenu.qml  TabStrip.qml
qml/features/views/: CompactFileView.qml  DetailsFileView.qml  LargeIconsFileView.qml  TilesFileView.qml
qml/shared/cards/: DriveCard.qml
qml/shared/dialogs/: ConfirmDialog.qml
qml/shared/headers/: AppTitleBar.qml  CommandBar.qml  DetailsHeaderBar.qml  NavigationBar.qml  ResizableHeaderCell.qml
qml/shared/layout/: AppShell.qml  CommandBar.qml  NavigationBar.qml  SplitWorkspace.qml  TitleBar.qml  WindowResizeHandles.qml
qml/shared/menus/: CopyPathsMenu.qml  CreateMenu.qml  MoreActionsMenu.qml  OpenWithMenu.qml  SortByMenu.qml  ThemeMenu.qml  ViewModeMenu.qml
qml/shared/panels/: PreviewPane.qml  WorkspaceArea.qml
qml/shared/popups/: NotificationsPopup.qml  SearchScopePopup.qml  ToastOverlay.qml
qml/shared/runtime/: AppModels.qml  AppOverlays.qml
sidebar/: DriveListModel.cpp  DriveListModel.h  QuickAccessModel.cpp  QuickAccessModel.h  SidebarItemData.cpp  SidebarItemData.h  SidebarTreeItem.cpp  SidebarTreeItem.h  SidebarTreeModel.cpp  SidebarTreeModel.h  SidebarViewModel.cpp  SidebarViewModel.h  WslModel.cpp  WslModel.h
statusbar/: StatusBarViewModel.cpp  StatusBarViewModel.h
tabs/: TabListModel.cpp  TabListModel.h  TabsViewModel.cpp  TabsViewModel.h
toolbar/: CommandBarViewModel.cpp  CommandBarViewModel.h
workspace/: FileListModel.cpp  FileListModel.h  WorkspaceViewModel.cpp  WorkspaceViewModel.h
